Basic matching working.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
 
-constants.filename=SpaceInvaders_2.0.md
-
+constants.filename=./data/SpaceInvaders_2.0.md
+constants.invaderSectionIdentifier=Known space invaders
+constants.radarSectionIdentifier=Example radar image
+constants.cutoffMatchDensity=0.4
+constants.acceptedMatchRatioForHit=0.75
